8295274: HelidonAppTest.java fails "assert(event->should_commit()) failed: invariant" from compiled frame"

Backport-of: 21e4f06ada24098dad4e71b0f9c13afeff87c24b